--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "alidns-nodejs": "^1.0.2",
     "dotenv": "^8.2.0",
-    "public-ip": "^4.0.2"
+    "get-ip-cn": "^1.0.0"
   }
 }
